codegen/c/src/snapshots/transmute_codegen_c__tests__function_return_const_boolean.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
#include <stdbool.h>

bool _TM0_F1f0_0(void);

bool _TM0_F1f0_0(void)
{
  return true;
}
