codegen/c/src/snapshots/transmute_codegen_c__tests__function_return_const_number.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
#include <stdbool.h>

double _TM0_F1f0_0(void);

double _TM0_F1f0_0(void)
{
  return 1;
}
