codegen/c/src/snapshots/transmute_codegen_c__tests__function_with_parameter.snap
---
source: codegen/c/src/lib.rs
expression: c.unwrap()
---
#include <stdbool.h>

void _TM0_F1f1n_0(double n_20);

void _TM0_F1f1n_0(double n_20)
{
  return;
}
